# RFP-langchain

./: .gitignore  README.md  cookies.txt  pyproject.toml  requirements.txt
rfps/: data.txt  db.sqlite3
rfps/core/: asgi.py  settings.py  urls.py  wsgi.py
rfps/main/: models.py  serializers.py  urls.py  views.py
rfps/main/migrations/: 0001_initial.py  0002_rfpdocument_document_file_alter_rfpdocument_file_id_and_more.py  0003_rfpdocument_project.py  0004_questionanswer.py
rfps/main/utils/: example.docx  insert_data.py  openai_setup.py  pinecone_setup.py  query_data.py  rag_langchain.py  rag_service.py
rfps/users/: managers.py  models.py  serializers.py  urls.py  views.py
rfps/users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py
